# yelf-OS

./: Makefile  README.md  include.mk  tarfs.dump
noelf/: Makefile  main.s
tools/: mkfs.yelftar.py
yeself/: CMakeLists.txt  Makefile  basickshell.cpp  basickshell.hpp  boot.s  build.sh  com.s  comio.cpp  comio.hpp  common.hpp  fileops.cpp  fileops.hpp  filewrappers.cpp  filewrappers.hpp  idedmadriver.cpp  idedmadriver.hpp  idirectory.hpp  ifile.hpp  kbdio.cpp  kbdio.hpp  kernel.cpp  link.ld  logging.cpp  logging.hpp  memoryops.hpp  pcidevscanner.cpp  pcidevscanner.hpp  stl.hpp  stringops.hpp  tarfs.cpp  tarfs.hpp  typedallocator.hpp  vgaio.cpp  vgaio.hpp
